# barz

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  shell.nix  temp.txt  temp.txt.save
data/: lexnegativegrading.alternative2.outlexerrors  lexpositivegrading.sample.outlextokens
data/ast_generation/: LL1_grammar_alternative.grm  attribute_grammar.ucalgary.grm  attribute_grammar_alternative.grm  attribute_grammar_parsing_table.csv
data/lexical_analysis/: lexnegativegrading.outlexerrors  lexnegativegrading.outlextokens  lexpositivegrading.outlextokens  lexpositivegrading.src
data/syntactical_analysis/: COMP442.grammar.BNF.clean.manual.grm.ucalgary  COMP442.grammar.BNF.corrected.grm  COMP442.grammar.BNF.grm  COMP442.grammar.clean.atocc.grm.atocc  COMP442.grammar.clean.ucalgary.grm  COMP442.grammar.expressions.atocc.grm  COMP442.grammar.final.grm.ucalgary  COMP442.grammar.rm.leftrec.grm  LL1_parsing_table.csv  first_and_follow_sets_new.csv  first_follow_sets_table.csv  first_follow_sets_table.html  parsing_table_ucalgary.csv  parsing_table_ucalgary.html
docs/: README.md  lexer_fsa.mermaid
examples/code_generation/: example-bubblesort.src  example-polynomial.src  example-simplemain.src
examples/lexical_analysis/: lexpositivegrading.outlextokens
examples/semantic_analysis/: bubblesort.outsymboltables  bubblesort.src.outsemanticerrors  bubblesort.src.outsymboltables  polynomial.outlextokens  polynomial.outsymboltables  polynomial.src.outsemanticerrors  polynomial.src.outsymboltables  polynomialsemanticerrors.src.outsemanticerrors  polynomialsemanticerrors.src.outsymboltables
examples/syntactical_analysis/: bubblesort.outlextokens  helloworld.dot  helloworld.outderivation  helloworld.outlextokens  helloworld.outsyntaxerrors  helloworld.src  polynomial.outderivation
include/Scanner/: DFA.h  NFA.h  RegexParser.h  Scanner.h  TransitionTable.h
java/astvisitor/: .classpath  .gitignore  .project  example1.ast  example1.errors  example1.stack.m  example1.symtab  example1.tags.m  example2.ast  example2.stack.m  example2.symtab  example2.tags.m  example3.ast  example3.stack.m  example3.symtab  example3.tags.m
src/: ASTDriver.cpp  CMakeLists.txt  CodeGenDriver.cpp  CompilerDriver.cpp  LexDriver.cpp  ParseDriver.cpp  Scanner.cpp  Scanner.h  SemanticsDriver.cpp
src/ASTGenerator/: AST.cpp  AST.h  ASTNode.cpp  ASTNode.h
src/CodeGenerator/: CodeGenVisitor.cpp  CodeGenVisitor.h  MemSizeVisitor.cpp  MemSizeVisitor.h
src/Parser/: Parser.cpp  Parser.h  ParsingTable.h  parsing_table.csv
tests/: CMakeLists.txt  CMakeLists.txt.in  TestNFA.cpp  TestRegexParser.cpp  TestScanner.cpp
tests/data/: invalidops.src  validcomments.src
tests/data/astgenerator/: inheritance.src  nested.dot  nested.outderivation  nested.outlextokens  nested.src  polynomial.dot  simple_main.src
tests/data/codegen/: test.dot  test.expected.m  test.outderivation  test.outlextokens  test.src  test.src.m  test.src.outsemanticerrors  test.src.outsymboltables  test.src.sizesymboltable
tests/data/compiler/: aggregation.src  arrays.src  bubblesort.src  memberfunctions.src  nestedfunction.src  polynomial.src  polynomialsemanticerrors.src  polynomialsyntaxerrors.src  recursion.src  simplemain.src  test.src
tests/data/compiler/codegen_out/: aggregation.m  arrays.m  bubblesort.m  memberfunctions.m  nestedfunction.m  polynomial.m  recursion.m  simplemain.m  test.m
tests/data/compiler/memsize_out/: aggregation.sizesymboltable  arrays.sizesymboltable  bubblesort.sizesymboltable  memberfunctions.sizesymboltable  nestedfunction.sizesymboltable  polynomial.sizesymboltable  polynomialsemanticerrors.sizesymboltable  recursion.sizesymboltable  simplemain.sizesymboltable
tests/data/compiler/parser_out/: aggregation.dot  aggregation.outderivation  arrays.dot  arrays.outderivation  bubblesort.dot  bubblesort.outderivation  memberfunctions.dot  memberfunctions.outderivation  nestedfunction.dot  nestedfunction.outderivation  polynomial.dot  polynomial.outderivation  polynomialsemanticerrors.dot  polynomialsyntaxerrors.dot  polynomialsyntaxerrors.outderivation  polynomialsyntaxerrors.outsyntaxerrors  recursion.dot  recursion.outderivation  simplemain.dot  simplemain.outderivation
tests/data/compiler/scanner_out/: aggregation.outlextokens  arrays.outlextokens  bubblesort.outlextokens  memberfunctions.outlextokens  nestedfunction.outlextokens  polynomial.outlextokens  polynomialsemanticerrors.outlextokens  polynomialsyntacerrors.outlextokens  polynomialsyntaxerrors.outlextokens  recursion.outlextokens  simplemain.outlextokens
tests/data/compiler/semantics_out/: aggregation.outsemanticerrors  arrays.outsemanticerrors  bubblesort.outsemanticerrors  memberfunctions.outsemanticerrors  nestedfunction.outsemanticerrors  polynomial.outsemanticerrors  polynomialsemanticerrors.outsemanticerrors  recursion.outsemanticerrors  simplemain.outsemanticerrors  test.outsemanticerrors
tests/data/compiler/symtab_out/: aggregation.outsymboltables  arrays.outsymboltables  bubblesort.outsymboltables  memberfunctions.outsymboltables  nestedfunction.outsymboltables  polynomial.outsymboltables  polynomialsemanticerrors.outsymboltables  recursion.outsymboltables  simplemain.outsymboltables
tests/data/parser/: array.src  factorial.src  inheritance.dot  inheritance.outderivation  inheritance.outlextokens  inheritance.src  nested.dot  nested.outderivation  nested.outlexerrors  nested.outlextokens  nested.outsyntaxerrors  nested.src  simple_class.src  simple_main.astout  simple_main.dot  simple_main.outderivation  simple_main.outlextokens  simple_main.src
tests/data/scanner/: invalidnums.src  morecomments.src
tests/data/semantics/: test.dot  test.outderivation  test.outlextokens  test.src  test.src.outsemanticerrors  test.src.outsymboltables  test1.dot  test1.outderivation  test1.outlextokens  test1.src  test1.src.outsemanticerrors  test1.src.outsymboltables  test2.dot  test2.outderivation  test2.outlexerrors  test2.outlextokens  test2.src  test2.src.outsemanticerrors  test2.src.outsymboltables
tools/: lib.m  moom  moon
(+57 files in other folders)
